@startuml
' Package für das Mechanismus-Modul
package "Mechanism Module" {
  class Mechanism {
    - gelenke: list
    - staebe: list
    - radius: float
    - fixed_gelenk_index: int
    - rotating_gelenk_index: int
    - theta_values: np.ndarray
    - verbindungs_matrix: np.ndarray
    - start_laengen: np.ndarray
    - trajectories: dict
    - selected_trajectory: int
    + create_verbindungs_matrix()
    + berechnet_laengen()
    + fehlerfunktion()
    + update_positions()
    + calculate_length_error()
  }

  class Gelenk {
    - x: float
    - y: float
    - is_static: bool
    - is_rotating: bool
    - is_tracked: bool
    + position()
  }

  class Stab {
    - gelenk1: Gelenk
    - gelenk2: Gelenk
    + calculate_current_length()
  }

  Mechanism --> Gelenk
  Mechanism --> Stab
}

' Package für das Datenbank-Modul
package "Database Module" {
  class Database {
    + save_mechanism_to_db(name, gelenke, staebe, radius)
    + load_mechanism_from_db(name)
  }
}

' Package für das Animations-Modul
package "Animation Module" {
  class Animation {
    + animate_mechanism(mechanism, show_length_error, show_stab_lengths, show_stab_angles)
    + calculate_length_error(mechanism, optimized_positions)
    + visualize_length_error(ax, positions, errors)
  }
}

' Package für das UI-Modul
package "UI Module" {
  class UI {
    + main()
    + create_mechanism()
    + load_and_simulate_mechanism()
    + export_csv()
    + export_import_mechanism()
    + generate_animation_gif()
    + create_stueckliste()
    + toggle_length_error_display()
  }
}

' Beziehungen zwischen den Modulen
Database ..> Mechanism : Creates/loads
Animation ..> Mechanism : Animates
UI ..> Database : Nutzt
UI ..> Animation : Ruft auf
UI ..> Mechanism : Erstellt / simuliert

@enduml